Atualizações de textos
.

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <div class="col-12 col-md-12">
         <img alt="image" class="fdb-icon" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//icons/coffee.svg">
         <h1>Érico Leandro</h1>
-        <p class="lead">Castellano para extranjeros</p>
-        <p class="lead">Especializado en ejecutivos, profesionales y empresas</p>
+        <p class="lead">¡Aprende con quien habla tu idioma!</p>
+        <p class="lead">Inglés - Portugues - Castellano para extranjeros</p>
         <p class="mt-5"><a href="https://www.froala.com" class="btn btn-dark">Conheça</a></p>
       </div>
     </div>
@@ -74,7 +74,7 @@
         <img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//draws/smile.svg">
       </div>
       <div class="col-12 col-md-6 col-lg-5 ml-md-auto text-left">
-        <h1>¿juntos o separados?</h1>
+        <h1>El Método</h1>
         <p class="lead">Si has notado que aprender inglés exige esfuerzo, y te has dado cuenta que no hay estrategias "milagro" para aprenderlo, has encontrado a tu instructor.</p>
         <p class="lead">Llevo 7 años enseñando a alumnos de diferentes niveles. Mi especialidad son los alumnos que han buscado e intentado diversos métodos, y que han descubierto la necesidad de un acompañamiento directo, personalizado y de alto nivel de conocimiento.</p>
       </div>
@@ -85,8 +85,7 @@
   <div class="container">
     <div class="row justify-content-center pb-5">
       <div class="col-12 text-center">
-        <h1>¿juntos o separados?</h1>
-        <p class="lead">Falar sobre o publico</p>
+        <h1>Enseñanza personalizada: tu perfil, tus necesidades...</h1>
       </div>
     </div>
 
@@ -133,6 +132,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 text-center">
+        <h2>Nuestros valores fundamentales:</h2>
         <h2>Evitar el método "papagayo"... aprender a pescar, no a que te regalen el pez...</h2>
         <p class="lead">Creo en una estrategia que no exija demasiada memorización de contenido. Es decir, que evita el exceso de frases listas y diálogos escenificados. Busco entrenar al alumno para que tenga un buen nivel comunicativo (control de la gramática y herramientas de comunicación), para que pueda crear sus propios diálogos, de acuerdo con su necesidad.</p>
       </div>
@@ -201,6 +201,7 @@
               <h1>Precios</h1>
               <p class="lead">¡Sin tasa de matrícula!</p>
               <p class="lead">Total flexibilidad: contrata tu programa de clases. Puedes cancelar tu clase hasta 24h antes de la misma, sin coste.</p>
+              <p class="lead"><p class="lead">Total flexibilidad: contrata tu programa de clases. Puedes cancelar tu clase hasta 24h antes de la misma, sin coste.</p></p>
             </div>
           </div>
 
