atualização de texto

--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
   <div class="container">
     <div class="row text-center">
       <div class="col">
-        <h1 class="text-light">Tipos de clases y servicios</h1>
+        <h1 class="text-light">Tipos de clases</h1>
       </div>
     </div>
 
     <div class="row mt-5 align-items-center">
-      <div class="col-12 col-sm-10 col-md-8 col-md-8 m-auto col-lg-4 text-center">
+      <div class="col-12 col-sm-10 col-md-8 col-md-8 m-auto col-lg-6 text-center">
         <div class="fdb-box shadow pb-5 pt-5 pl-3 pr-3 rounded">
           <h2>Clases particulares</h2>
           <ul class="text-left">
@@ -174,19 +174,27 @@
         </div>
       </div>
 
-      <div class="col-12 col-sm-10 col-md-8 col-md-8 m-auto col-lg-4 text-center pt-4 pt-lg-0">
-        <div class="fdb-box shadow pb-5 pt-5 pl-3 pr-3 fdb-touch rounded">
-          <h2 class="text-primary">Cursos In Company</h2>
+      <div class="col-12 col-sm-10 col-md-8 col-md-8 m-auto col-lg-6 text-center">
+        <div class="fdb-box shadow pb-5 pt-5 pl-3 pr-3 rounded">
+          <h2>Cursos In Company</h2>
           <p class="h3 font-weight-light">Cursos a medida para su empresa y adaptado a los niveles y necesidades de su plantilla</p>
         </div>
+      </div>  
+
+    </div>
+  </div>
+</section>
+<section class="fdb-block fp-active" data-block-type="call_to_action" data-id="1" draggable="true">
+  <div class="container align-items-center justify-content-center d-flex">
+    <div class="row align-items-center text-left">
+      <div class="col-12 col-sm-6">
+        <img alt="image" class="img-fluid" src="https://cdn.jsdelivr.net/gh/froala/design-blocks@2.0.1/dist/imgs//draws/sync2.svg">
       </div>
 
-      <div class="col-12 col-sm-10 col-md-8 col-md-8 m-auto col-lg-4 text-center pt-4 pt-lg-0">
-        <div class="fdb-box shadow pb-5 pt-5 pl-3 pr-3 rounded">
-          <h2>Traductor on-demand</h2>
-          <p class="h3 font-weight-light">para su empresa : Descubra la herramienta de tener a un traductor bajo demanda para sus clientes más importantes. Sea en un hotel, fábrica o en una mesa de negociación, conozca las ventajas de tener a solo cuando la necesite, sin aumentar su plantilla.
-</p>
-        </div>
+      <div class="col-12 col-lg-5 ml-auto pt-5 pt-lg-0">
+        <h1>Traductor on-demand</h1>
+        <p class="lead">para su empresa : Descubra la herramienta de tener a un traductor bajo demanda para sus clientes más importantes. Sea en un hotel, fábrica o en una mesa de negociación, conozca las ventajas de tener a solo cuando la necesite, sin aumentar su plantilla.</p>
+        <p class="mt-4"><a href="https://www.froala.com" class="btn btn-secondary">Pronosticar</a></p>
       </div>
     </div>
   </div>
